--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,24 @@
 body {
   margin: 0;
-  font-family: 'Roboto';
+  font-family: "Roboto";
+}
+
+:root {
+  --app-color: orange;
 }
 
 .feature_icon {
   font-size: 64px;
-  color: #D19C97;
+  color: #d19c97;
+}
+
+.MuiTypography-root.form_title {
+  font-size: 32px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.error_text {
+  color: red;
+  text-align: center;
 }
